# shipment-exception-triage

./: .env.example  .gitignore  README.md  events.jsonl  pyproject.toml
.github/workflows/: ci.yml
eval/: labels.yaml
src/shipment_triage/: __init__.py  api.py  bootstrap.py  cli.py
src/shipment_triage/adapters/: __init__.py  artifacts.py  edi214.py  feed.py  openai.py  sqlite_state.py  tracking.py
src/shipment_triage/application/: __init__.py  enrichment.py  escalation.py  evaluation.py  evidence.py  fallback.py  guardrails.py  idempotency.py  pipeline.py  ports.py
src/shipment_triage/domain/: __init__.py  classification.py  enrichment.py  escalation.py  evaluation.py  merge.py  models.py  policy.py  runs.py  statuses.py  timelines.py  triggers.py
tests/: test_api.py  test_artifacts.py  test_cli.py  test_edi214.py  test_enrichment_executor.py  test_escalation.py  test_evaluation.py  test_fallback.py  test_feed.py  test_openai.py  test_package.py  test_pipeline.py  test_policy.py  test_sqlite_state.py  test_timelines.py  test_tracking.py  test_triggers.py
tests/golden/: edi214_enriched.edi  edi214_feed_only.edi
tests/live/: test_live_providers.py
